add query by id
