# swagger-output.json
@@ -79,14 +79,7 @@
             "type": "string"
           }
         ],
-        "responses": {
-          "204": {
-            "description": "No Content"
-          },
-          "404": {
-            "description": "Not Found"
-          }
-        }
+        "responses": {}
       }
     },
     "books/{id}": {
